# MPRPC

./: README.md
master/: CMakeLists.txt  README.md
master/example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
master/example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
master/example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
master/lib/include/: lockqueue.h  mprpcapplication.h  rpcprovider.h
master/src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
master/src/include/: logger.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  zookeeperutil.h
master/test/protobuf/: a.out  main.cc  my_program  test.pb.cc  test.pb.h  test.proto
master/tt/: CMakeCache.txt  Makefile  cmake_install.cmake
